--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 </head>
 <style>
     .button-class {
-        font-size: 30px;
+        color: rgb(68, 129, 17);background-color: rgb(222, 222, 236);
+        font-size: 45px;
     }
 
     .table-class {
-        width: 100%;
-        margin-top: 10px;
+        width: 50%;
+        margin-top: 50px;
 
     }
 
@@ -18,36 +19,36 @@
     }
 </style>
 <body>
-<p>Hello world</p>
+<h2><p style="text-align: center; color: burlywood;">Fahim Chowdhury Jisun <br>C193052</p></h2>
 <img style=" display: block;
-margin-left: auto;margin-right: auto; width: 50%;height: 250px; " src="images/WHAT-IS-WEB-DESIGN.jpg">
-<table class="table-class" style="width:40%;margin:0 auto; text-align: center "  cellspacing="30" border="2" style="border-collapse: collapse">
+margin-left: auto;margin-right: auto; width: 50%;height: 350px; " src="images/WHAT-IS-WEB-DESIGN.jpg">
+<table class="table-class" style="width:40%;margin:15 auto; text-align: center "  cellspacing="20" border="5" style="border-collapse: collapse">
     <tr>
         <td style="text-align: center">1</td>
         <td>2</td>
         <td>3</td>
     </tr>
     <tr>
-        <td>CSE</td>
-        <td>ME</td>
+        <td>CS</td>
+        <td>BBA</td>
         <td rowspan="3"></td>
     </tr>
     <tr>
-        <td>IIUC</td>
-        <td>DU</td>
+        <td style="color: red ; background-color: rgb(196, 187, 204);"><b>IIUC</b></td>
+        <td>AIUB</td>
 
     </tr>
     <tr>
         <td colspan="2">102</td>
     </tr>
 </table>
-<div id="" class="form" style="background-color: rgb(93, 50, 122);width: 50%;float: left">
+<div id="" class="form" style="text-align:center ;background-color: rgb(212, 130, 171);width: 50%;float: left;">
     <input placeholder="Enter student name" type="text" name="studentName"><br>
     <input placeholder="Enter Student ID" type="text" name="studentId"><br>
     <select name="department">
         <option disabled selected value="">Select Department</option>
-        <option>CSE</option>
-        <option>ME</option>
+        <option>CS</option>
+        <option>BBA</option>
         <option>EEE</option>
         <option>ETE</option>
     </select><br>
